# docal

./: .gitignore  .scpyrep.py.swp  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  MyDoc.py  README.md  README.rst  example.py  pyproject.toml  requirements.txt  scirep.py  scpycalc.py  scpyrep.py  setup.cfg  setup.py  todo  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: release.yml
ScpyCalc/: __init__.py  scpycalc.py
docal/: __init__.py  __main__.py  calculation.py  docal.py  document.py  equation.py  formatting.py  gui.py  lsp.py  ooxml.py  parsing.py  procedure.py  processing.py  utils.py
docal/document/: __init__.py  latex.py  word.docx  word.py
docal/handlers/: latex.py  template.docx  word.py
docal/parsers/: dcl.py  excel.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: example.py  example.tex  example.texw  example2.py  example2.tex  example2.texw  try.texw
src/: __init__.py  parsing.py
tests/: dcl-example.json  test.docal.py  test_docal.py  test_functional.py
