[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "docal"
version = "4.0.0"
description = "Inject calculations into Word and LaTeX documents with ease!"
authors = [
    { name = "Kidus Adugna", email = "kidusadugna@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
keywords = ["docal", "math", "latex", "word", "engineering", "equation", "calculations", "mathcad", "scientific-reports"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "twine", "build"]
lsp = ["pygls"]

[project.scripts]
docal = "docal.__main__:main"

[project.urls]
Homepage = "https://github.com/K1DV5/docal"
Issues = "https://github.com/K1DV5/docal/issues"

[tool.setuptools]
packages = ["docal", "docal.parsers", "docal.document"]
include-package-data = true

[tool.setuptools.package-data]
"docal.document" = ["word.docx"]
